# esp32.modules

./: .gitignore  README.md
4w_PCFan/: README.md  platformio.ini
4w_PCFan/src/: main.cpp
AuthAsyncWebServer/: auth-request.html  platformio.ini
AuthAsyncWebServer/include/: authorizer.h  serve_control_request_handler.h
AuthAsyncWebServer/src/: main.cpp
EBS_IDF/: CMakeLists.txt
EBS_IDF/main/: CMakeLists.txt  main.c
ESP32IDF_HttpWebServer/: CMakeLists.txt  platformio.ini  sdkconfig.esp32dev
ESP32IDF_HttpWebServer/include/: protocol_examples_common.h  protocol_examples_utils.h
ESP32IDF_HttpWebServer/src/: main.c
EcoBloomStorage_Portable/: platformio.ini
TempHumidity_AM2320/: platformio.ini
TempHumidity_AM2320/src/: main.cpp
components/shift-register/: CMakeLists.txt
dht_sensor/: CMakeLists.txt
dht_sensor/main/: CMakeLists.txt  main.c
lab-server-idf/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.new
lab-server-idf/include/: protocol_examples_common.h
lab-server-idf/src/: CMakeLists.txt  Kconfig.projbuild  main.c  rest_server.c  wifi_sta.c
sd-card-module-storage/: CMakeLists.txt  README.md  demo.txt  sdkconfig.ci
vespertine-web-hub/: CMakeLists.txt  README.md  sdkconfig.defaults
vespertine-web-hub/components/gbaby_wifi/: CMakeLists.txt  Kconfig  connect.c  gbaby_wifi.c
vespertine-web-hub/components/gbaby_wifi/include/: connect.h
vespertine-web-hub/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  rest_server.c
water-level/: CMakeLists.txt
water-level/main/: main.c
(+50 files in other folders)
